Fixed most of the columns. Storno quantity is still wrong and maybe AA column needs to be fixed.